added changes for project section

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <h6 class="project-tool">Browserstack</h6>
                 </div>
                 <hr class="project-hr">
-                <h4> Webex Instant Connect Automation Testing</h4>
+                <h4>Cisco Webex Instant Connect Automation Testing</h4>
                 <!-- <div class="project-link flex">
                     <a href="https://github.com/monu/Portfolio" target="_blank"><img
                             src="./images/github.png"></a>
@@ -248,7 +248,7 @@
 
                 </div>
                 <hr class="project-hr">
-                <h4>Webex Paas</h4>
+                <h4>Cisco Webex PaaS</h4>
                 <!-- <div class="project-link flex">
                     <a href="https://github.com/monu/" target="_blank"><img
                             src="./images/github.png"></a>
