added some changes

--- a/index.html
+++ b/index.html
@@ -58,9 +58,25 @@
         <div class="container">
             <h3 style="text-align: center;">WORK EXPERIENCE</h3>
             <div class="experience-box ">
+
                 <ul style="list-style: disc;">
                     <li>
-                        <h4>Automation / Devops Engineer (12/2021 - Present)</h4>
+                        <h4>Devops Engineer (01/2023 - Present)</h4>
+                    </li>
+                    <h5>Capgemini Engineering Limited, Gurugram Haryana</h5>
+                </ul>
+                <div class="work-details">
+                    <ul style="list-style: circle;">
+                        <li>Worked on implementing AWS using EC2, S3, RDS, ECS, Elastic Load Balancer, Auto Scaling
+                            groups</li>
+                        <li>Configured AWS IAM and Security Group in Public and Private Subnets in VPC.</li>
+                        <li>Identified bottlenecks and potential points of failure in the system's architecture.</li>
+                        <li>Developed automated scripts to deploy services and infrastructure components in AWS.</li>
+                    </ul>
+                </div>
+                <ul style="list-style: disc;">
+                    <li>
+                        <h4>Automation Test Engineer (02/2022 - 12/2022)</h4>
                     </li>
                     <h5>Capgemini Engineering Limited, Gurugram Haryana</h5>
                 </ul>
@@ -80,15 +96,23 @@
                         <li> Manage and maintain the test environments and processes, keeping up to date with the latest
                             industry
                             developments and guiding continuous improvement</li>
-                        <li>Worked on implementing AWS using EC2, S3, RDS, ECS, Elastic Load Balancer, Auto Scaling
-                            groups</li>
-                        <li>Configured AWS IAM and Security Group in Public and Private Subnets in VPC.</li>
-                        <li>Identified bottlenecks and potential points of failure in the system's architecture.</li>
-                        <li>Developed automated scripts to deploy services and infrastructure components in AWS.</li>
                     </ul>
                 </div>
-
-
+                <ul style="list-style: disc;">
+                    <li>
+                        <h4>Automation Test Engineer (11/2020 - 10/2021)</h4>
+                    </li>
+                    <h5>CEDCOSS Technology Private Limited, Lucknow Uttar Pradesh</h5>
+                </ul>
+                <div class="work-details">
+                    <ul style="list-style: circle;">
+                        <li> Designed, developed, and maintained automated test scripts using WebdriverIO for web application</li>
+                        <li> Collaborated with the development team to understand project requirements and ensure test coverage.</li>
+                        <li> Conducted end-to-end testing, cross-browser testing, and regression testing to validate software 
+                            functionality</li>
+                    </ul>
+                </div>
+                
                 <!-- <ul style="list-style: disc;">
                     <li>
                         <h4>Intershala Training</h4>
@@ -170,7 +194,7 @@
                     <p>Pawa Nagar Mahaveer Inter College</p>
                 </div>
                 <div class="education-box flex">
-                    <h4>High School, Higher Secondary School</h4>
+                    <h4>High School (10th)</h4>
                     <h5>2014 - 2015</h5>
                     <p>Pawa Nagar Mahaveer Inter College</p>
                 </div>
@@ -269,6 +293,42 @@
                 </div>
                 <hr class="project-hr">
                 <h4>My Portfolio</h4>
+                <!-- <div class="project-link flex">
+                    <a href="https://github.com/monu/" target="_blank"><img
+                            src="./images/github.png"></a>
+                    <!-- <a href="#" target="_blank"><img src="./images/search.png" alt=""></a> -->
+            </div>
+            <div class="projects-card flex">
+                <div class="project-img">
+                    <img src="./images/ElectricianWala.png" />
+                </div>
+                <div class="project-technology flex">
+                    <h6 class="project-tool">Html</h6>
+                    <h6 class="project-tool">CSS</h6>
+                    <h6 class="project-tool">Bootstrap</h6>
+                    <h6 class="project-tool">JavaScript</h6>
+                    <h6 class="project-tool">MySQL</h6>
+                </div>
+                <hr class="project-hr">
+                <h4>Call Electrician</h4>
+                <!-- <div class="project-link flex">
+                    <a href="https://github.com/monu/" target="_blank"><img
+                            src="./images/github.png"></a>
+                    <!-- <a href="#" target="_blank"><img src="./images/search.png" alt=""></a> -->
+            </div>
+            <div class="projects-card flex">
+                <div class="project-img">
+                    <img src="./images/PathologyLab.png" />
+                </div>
+                <div class="project-technology flex">
+                    <h6 class="project-tool">Html</h6>
+                    <h6 class="project-tool">CSS</h6>
+                    <h6 class="project-tool">Bootstrap</h6>
+                    <h6 class="project-tool">JavaScript</h6>
+                    <h6 class="project-tool">MySQL</h6>
+                </div>
+                <hr class="project-hr">
+                <h4>PathologyLab</h4>
                 <!-- <div class="project-link flex">
                     <a href="https://github.com/monu/" target="_blank"><img
                             src="./images/github.png"></a>
