added some changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="#education" class="hover-link">Education</a></li>
                     <li><a href="#certification-section" class="hover-link">Certification</a></li>
                     <li><a href="#project-section" class="hover-link">Projects</a></li>
-                    <li><a href="#contact" class="hover-link">Contact</a></li>
+                    <li><a href="https://topmate.io/sonu_madheshiya" class="hover-link">1 : 1 Call </a></li>
                 </ul>
             </div>
             <a href="#" class="nav-toggle hover-link" id="nav-toggle"><i class="fa-solid fa-bars"></i></a>
