added minor changes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="header-right">
                 <h3>Hi, I'm</h3>
                 <h2>Sonu Madheshiya</h2>
-                <h3>Automation / Devops Engineer</h3>
+                <h3>Automation Test Engineer</h3>
                 <h4>at Capgemini [ Gurugram , Haryana ]</h4>
                 <a href="#" target="_blank" class="primary-btn get-started-btn">Download CV</a>
             </div>
@@ -61,22 +61,7 @@
 
                 <ul style="list-style: disc;">
                     <li>
-                        <h4>Devops Engineer (10/2023 - Present)</h4>
-                    </li>
-                    <h5>Capgemini Engineering Limited, Gurugram Haryana</h5>
-                </ul>
-                <div class="work-details">
-                    <ul style="list-style: circle;">
-                        <li>Worked on implementing AWS using EC2, S3, RDS, ECS, Elastic Load Balancer, Auto Scaling
-                            groups</li>
-                        <li>Configured AWS IAM and Security Group in Public and Private Subnets in VPC.</li>
-                        <li>Identified bottlenecks and potential points of failure in the system's architecture.</li>
-                        <li>Developed automated scripts to deploy services and infrastructure components in AWS.</li>
-                    </ul>
-                </div>
-                <ul style="list-style: disc;">
-                    <li>
-                        <h4>Automation Test Engineer (12/2021 - 09/2023)</h4>
+                        <h4>Automation Test Engineer (12/2021 - Present)</h4>
                     </li>
                     <h5>Capgemini Engineering Limited, Gurugram Haryana</h5>
                 </ul>
@@ -97,21 +82,6 @@
                             industry
                             developments and guiding continuous improvement</li>
                     </ul>
-                </div>
-                <ul style="list-style: disc;">
-                    <li>
-                        <h4>Automation Test Engineer (11/2020 - 11/2021)</h4>
-                    </li>
-                    <h5>CEDCOSS Technology Private Limited, Lucknow Uttar Pradesh</h5>
-                </ul>
-                <div class="work-details">
-                    <ul style="list-style: circle;">
-                        <li> Designed, developed, and maintained automated test scripts using WebdriverIO for web application</li>
-                        <li> Collaborated with the development team to understand project requirements and ensure test coverage.</li>
-                        <li> Conducted end-to-end testing, cross-browser testing, and regression testing to validate software 
-                            functionality</li>
-                    </ul>
-                </div>
                 
                 <!-- <ul style="list-style: disc;">
                     <li>
@@ -218,6 +188,30 @@
             <div class="certificate-box">
                 <img src="./images/PostmanApi.jpg" alt="">
                 <h4>Postman Api Tool</h4>
+            </div>
+            <div class="certificate-box">
+                <img src="./images/QALead.jpg" alt="">
+                <h4>Be a QA Lead</h4>
+            </div>
+            <div class="certificate-box">
+                <img src="./images/Devops1.jpg" alt="">
+                <h4>DevOps Beginners to Advanced</h4>
+            </div>
+            <div class="certificate-box">
+                <img src="./images/Typescript.jpg" alt="">
+                <h4> TYPESCRIPT</h4>
+            </div>
+            <div class="certificate-box">
+                <img src="./images/WebDriverIO+NodeJS.jpg" alt="">
+                <h4>WebDriverIO + Node.js -JavaScript UI Automation from Scratch</h4>
+            </div>
+            <div class="certificate-box">
+                <img src="./images/WebdriverIO E2E Test Framework (Web+API +DB) - 2023.jpg" alt="">
+                <h4>WebdriverIO E2E Test Framework (Web+API +DB) - 2023</h4>
+            </div>
+            <div class="certificate-box">
+                <img src="./images/Terraform Associate.jpg" alt="">
+                <h4>HashiCorp Certified: Terraform Associate 2023</h4>
             </div>
             <div class="certificate-box">
                 <img src="./images/AWS.png" alt="">
@@ -338,9 +332,23 @@
     </section>
 
     <hr>
+    <section id="certification-section">
+        <h3 style="text-align: center;color: rgb(15, 85, 190);">MINDSET</h3>
+        
+    <p style="text-align: center;color: rgb(201, 139, 167);">
+        I think the most important skill is being able to learn new things quickly. 
+        In a world where things are always changing, being a quick learner is like having a secret weapon.
+    </p>
+
+    <p style="text-align: center;color: rgb(230, 12, 110);">
+        <em>"To learn quickly, you have to know how to learn." - Sonu Madheshiya 😎</em>
+    </p>
+    </section>
+    <hr>
+
     <section id="contact">
         <footer class='footer-container flex'>
-            <p>Sonu Madheshiya - Portfolio 2023</p>
+            <p>Sonu Madheshiya - Portfolio 2024</p>
             <div class='social-links'>
                 <a href='https://www.linkedin.com/in/%F0%9D%95%8A%F0%9D%95%A0%F0%9D%95%9F%F0%9D%95%A6-%F0%9D%95%84%F0%9D%95%92%F0%9D%95%95%F0%9D%95%99%F0%9D%95%96%F0%9D%95%A4%F0%9D%95%99%F0%9D%95%9A%F0%9D%95%AA%F0%9D%95%92-6962b5221/'
                     target='_blank'> <img src='./images/linkedin.png'></a>
