--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         <footer class='footer-container flex'>
             <p>Sonu Madheshiya - Portfolio 2024</p>
             <div class='social-links'>
-                <a href='https://www.linkedin.com/in/%F0%9D%95%8A%F0%9D%95%A0%F0%9D%95%9F%F0%9D%95%A6-%F0%9D%95%84%F0%9D%95%92%F0%9D%95%95%F0%9D%95%99%F0%9D%95%96%F0%9D%95%A4%F0%9D%95%99%F0%9D%95%9A%F0%9D%95%AA%F0%9D%95%92-6962b5221/'
+                <a href='https://www.linkedin.com/in/sonumadheshiya/'
                     target='_blank'> <img src='./images/linkedin.png'></a>
                 <a href='#' target='_blank'><img src='./images/whatsapp.png'></a>
                 <a href='#' target='_blank'> <img src='./images/github.png'></a>
