--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="header-left">
                 <div class="image-box-1">
                     <div class="image-box-2 flex">
-                        <img src="./images/Sonu.png" alt='image' class='myimage' />
+                        <img src="./images/Sonu_Photo.png" alt='image' class='myimage' />
                     </div>
                 </div>
                 <!-- <img src="./images/mybitmoji.jpeg" alt="header-image" /> -->
