--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h3>Hi, I'm</h3>
                 <h2>Sonu Madheshiya</h2>
                 <h3>Automation Test Engineer</h3>
-                <h4>at Capgemini [ Gurugram , Haryana ]</h4>
+                <h4>at Encora [ Noida , Uttar Pradesh ]</h4>
                 <a href="#" target="_blank" class="primary-btn get-started-btn">Download CV</a>
             </div>
 
@@ -61,7 +61,7 @@
 
                 <ul style="list-style: disc;">
                     <li>
-                        <h4>Automation Test Engineer (12/2021 - Present)</h4>
+                        <h4>Automation Test Engineer (12/2021 - 08/2024)</h4>
                     </li>
                     <h5>Capgemini Engineering Limited, Gurugram Haryana</h5>
                 </ul>
@@ -81,6 +81,20 @@
                         <li> Manage and maintain the test environments and processes, keeping up to date with the latest
                             industry
                             developments and guiding continuous improvement</li>
+                    </ul>
+
+                <ul style="list-style: disc;">
+                    <li>
+                        <h4>Automation Test Engineer (09/2021 - Present)</h4>
+                    </li>
+                    <h5>Encora , Noida Uttar Prdesh</h5>
+                </ul>
+                     <ul style="list-style: circle;">
+                        <li>Developing robust automation scripts for new features, ensuring comprehensive test coverage.</li>
+                        <li>Working within an Agile team to develop manual and automated test cases to provide ongoing
+                            regression and unit test coverage for new features and releases.</li>
+                        <li>Maintaining and optimizing existing automation scripts, enhancing overall test efficiency.</li>
+                        <li>Performing Cross-browser Testing using BrowserStack Tool.</li>
                     </ul>
                 
                 <!-- <ul style="list-style: disc;">
