--- a/index.html
+++ b/index.html
@@ -82,31 +82,21 @@
                             industry
                             developments and guiding continuous improvement</li>
                     </ul>
+                </div>
                 <ul style="list-style: disc;">
                     <li>
-                        <h4>Automation Test Engineer (09/2021 - Present)</h4>
+                        <h4>Automation Test Engineer (09/2024 - Present)</h4>
                     </li>
-                    <h5>Encora , Noida Uttar Prdesh</h5>
+                    <h5>Encora , Noida Uttar Pradesh</h5>
                 </ul>
+                <div class="work-details">
                      <ul style="list-style: circle;">
                         <li>Developing robust automation scripts for new features, ensuring comprehensive test coverage.</li>
                         <li>Maintaining and optimizing existing automation scripts, enhancing overall test efficiency.</li>
                         <li>Performing Cross-browser Testing using BrowserStack Tool.</li>
                     </ul>
-                
-                <!-- <ul style="list-style: disc;">
-                    <li>
-                        <h4>Intershala Training</h4>
-                    </li>
-                    <h5>Android App Development</h5>
-                    </li>
-                    <div class="work-details">
-                        <ul style="list-style: circle;">
-                            <li>Acquired frontend and backend development skills XML, Kotlin.</li>
-                        </ul>
-                </ul> -->
-
             </div>
+            </div>     
         </div>
     </section>
     <hr>
